--- a/emacs.org
+++ b/emacs.org
@@ -175,13 +175,14 @@ Better version of help. Remap normal help keys to Helpful's versions.
   ([remap describe-key] . helpful-key))
 #+end_src
 
+
 ** Keybindings
 Make <Esc> quit prompts
 #+begin_src emacs-lisp
 (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
 #+end_src
 
-**** TODO Improve work flow
+**** Improve work flow (not used)
 Eventually create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. 
 hydra    ; ties related commands into short bindings with a common prefix
 
@@ -457,6 +458,9 @@ Faster terminal due to being compiled. Default is a better mode than term-mode; 
 Between term-mode eshell. 
 ** eshell
 More customization in Elisp. Supports Tramp. 
+* File Management
+** Dired
+
 * Localwords
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell
 
