Fixed up counsel bindngs, fixed rainbow-delimiters, removed readme

--- a/emacs.org
+++ b/emacs.org
@@ -135,14 +135,12 @@ Ivy-rich provides information to display in input buffer to counsel.
 Along with ivy-rich, counsel displays info along with suggestions in input buffer.
 #+begin_src emacs-lisp
   (use-package counsel
-    :bind (("M-x" . counsel-M-x)
-	   ("C-x b" . counsel-ibuffer)
-	   ("C-x C-f" . counsel-find-file)
-	   :map minibuffer-local-map
-	   ;("C-r" . 'counsel-minibuffer-history)
-	   ))
+    :bind (("M-x" . counsel-M-x)      ; displays ivy-rich info in minibuffer
+           ("C-x C-f" . counsel-find-file)
+           :map minibuffer-local-map
+           ("C-r" . 'counsel-minibuffer-history)
+           ))
 #+end_src
-o
 *** Which-key
 #+begin_src emacs-lisp
   (use-package which-key
@@ -188,6 +186,9 @@ hydra    ; ties related commands into short bindings with a common prefix
 
 * Development 
 ** Rainbow Delimiters
+#+begin_src emacs-lisp
+(use-package rainbow-delimiters)
+#+end_src
 ** Smartparens
 Auto-creates closing parenthesis and bar and, smartly, writes it over. 
 #+begin_src emacs-lisp
@@ -462,6 +463,5 @@ More customization in Elisp. Supports Tramp.
 ** Dired
 
 * Localwords
-#  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell
-
+#  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell   Dired
 
